<?xml version="1.0"?>
<package format="2">
  <name>teensy_code</name>
  <version>1.1.3</version>
  <description>The teensy_code package</description>

  <maintainer email="jakeware@mit.edu">Jake Ware</maintainer>
  <author>Jake Ware</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
 
  <depend>roscpp</depend>
</package>
