<?xml version="1.0"?>
<package format="2">
  <name>svis_ros</name>
  <version>1.1.3</version>
  <description>The svis_ros package</description>

  <maintainer email="jakeware@mit.edu">Jake Ware</maintainer>
  <author>Jake Ware</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>fla_utils</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/svis_ros.xml"/>
  </export>
</package>
