<?xml version="1.0"?>
<package format="2">
  <name>svis</name>
  <version>0.0.0</version>
  <description>A simple visual inertial synchronization approach.</description>

  <maintainer email="jakeware@mit.edu">Jake Ware</maintainer>
  <author>Jake Ware</author>
  <license>MIT</license>
  <buildtool_depend>cmake</buildtool_depend>

  <!-- <depend>roscpp</depend> -->

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
